--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -147,6 +147,11 @@
       "info": {
         "title": "Contacto",
         "description": "Estás a un paso de olvidarte de las multas y cierres. Escríbenos y nos pondremos en contacto para más detalles."
+      },
+      "emailSubjet": "Buenaventura.tax | CONTACTO DESDE FORMULARIO",
+      "link": {
+        "part1": "O contáctanos directamente en ",
+        "part2": " y al "
       }
     }
   }
